# packages/agents-eval-mcp/src/mcp-server/tools/evaluationsUpdateEvaluationJobConfig.ts
@@ -1,40 +1,0 @@
-/*
- * Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT.
- */
-
-import { evaluationsUpdateEvaluationJobConfig } from '../../funcs/evaluationsUpdateEvaluationJobConfig.js';
-import { UpdateEvaluationJobConfigRequest$zodSchema } from '../../models/updateevaluationjobconfigop.js';
-import { formatResult, ToolDefinition } from '../tools.js';
-
-const args = {
-  request: UpdateEvaluationJobConfigRequest$zodSchema,
-};
-
-export const tool$evaluationsUpdateEvaluationJobConfig: ToolDefinition<typeof args> = {
-  name: 'evaluations-update-evaluation-job-config',
-  description: `Update Evaluation Job Config`,
-  annotations: {
-    title: '',
-    destructiveHint: false,
-    idempotentHint: false,
-    openWorldHint: false,
-    readOnlyHint: false,
-  },
-  args,
-  tool: async (client, args, ctx) => {
-    const [result, apiCall] = await evaluationsUpdateEvaluationJobConfig(client, args.request, {
-      fetchOptions: { signal: ctx.signal },
-    }).$inspect();
-
-    if (!result.ok) {
-      return {
-        content: [{ type: 'text', text: result.error.message }],
-        isError: true,
-      };
-    }
-
-    const value = result.value;
-
-    return formatResult(value, apiCall);
-  },
-};
