# packages/agents-eval-mcp/src/models/updateevaluationjobconfigop.ts
@@ -1,88 +1,0 @@
-/*
- * Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT.
- */
-
-import * as z from 'zod';
-import { BadRequest, BadRequest$zodSchema } from './badrequest.js';
-import { Forbidden, Forbidden$zodSchema } from './forbidden.js';
-import { InternalServerError, InternalServerError$zodSchema } from './internalservererror.js';
-import { NotFound, NotFound$zodSchema } from './notfound.js';
-import { Unauthorized, Unauthorized$zodSchema } from './unauthorized.js';
-import { UnprocessableEntity, UnprocessableEntity$zodSchema } from './unprocessableentity.js';
-
-export type UpdateEvaluationJobConfigRequestBody = {
-  jobFilters?: any | null | undefined;
-};
-
-export const UpdateEvaluationJobConfigRequestBody$zodSchema: z.ZodType<
-  UpdateEvaluationJobConfigRequestBody,
-  z.ZodTypeDef,
-  unknown
-> = z.object({
-  jobFilters: z.any().nullable().optional(),
-});
-
-export type UpdateEvaluationJobConfigRequest = {
-  tenantId: string;
-  projectId: string;
-  configId: string;
-  body?: UpdateEvaluationJobConfigRequestBody | undefined;
-};
-
-export const UpdateEvaluationJobConfigRequest$zodSchema: z.ZodType<
-  UpdateEvaluationJobConfigRequest,
-  z.ZodTypeDef,
-  unknown
-> = z.object({
-  body: z.lazy(() => UpdateEvaluationJobConfigRequestBody$zodSchema).optional(),
-  configId: z.string(),
-  projectId: z.string().describe('Project identifier'),
-  tenantId: z.string().describe('Tenant identifier'),
-});
-
-/**
- * Evaluation job config updated
- */
-export type UpdateEvaluationJobConfigResponseBody = {
-  data?: any | null | undefined;
-};
-
-export const UpdateEvaluationJobConfigResponseBody$zodSchema: z.ZodType<
-  UpdateEvaluationJobConfigResponseBody,
-  z.ZodTypeDef,
-  unknown
-> = z
-  .object({
-    data: z.any().nullable().optional(),
-  })
-  .describe('Evaluation job config updated');
-
-export type UpdateEvaluationJobConfigResponse = {
-  ContentType: string;
-  StatusCode: number;
-  RawResponse: Response;
-  object?: UpdateEvaluationJobConfigResponseBody | undefined;
-  BadRequest?: BadRequest | undefined;
-  Unauthorized?: Unauthorized | undefined;
-  Forbidden?: Forbidden | undefined;
-  NotFound?: NotFound | undefined;
-  UnprocessableEntity?: UnprocessableEntity | undefined;
-  InternalServerError?: InternalServerError | undefined;
-};
-
-export const UpdateEvaluationJobConfigResponse$zodSchema: z.ZodType<
-  UpdateEvaluationJobConfigResponse,
-  z.ZodTypeDef,
-  unknown
-> = z.object({
-  BadRequest: BadRequest$zodSchema.optional(),
-  ContentType: z.string(),
-  Forbidden: Forbidden$zodSchema.optional(),
-  InternalServerError: InternalServerError$zodSchema.optional(),
-  NotFound: NotFound$zodSchema.optional(),
-  RawResponse: z.instanceof(Response),
-  StatusCode: z.number().int(),
-  Unauthorized: Unauthorized$zodSchema.optional(),
-  UnprocessableEntity: UnprocessableEntity$zodSchema.optional(),
-  object: z.lazy(() => UpdateEvaluationJobConfigResponseBody$zodSchema).optional(),
-});
